<?xml version="1.0"?>
<package>
  <name>cereal_port</name>
  <version>1.0.0</version>
  <description>Serial port communication stack holding some useful tools for serial port communication, namely CerealPort, a serial port ROS library.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="rkapravobhaumik@gmail.com">Arkapravo Bhaumik</maintainer>
  <maintainer email="yoneken@ieee.org">Kenta Yonekura</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://ros.org/wiki/roomba_robot</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="goncabrita@gmail.com">Goncalo Cabrita and Pedro Sousa</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
